--- a/style.css
+++ b/style.css
@@ -4,17 +4,60 @@
     box-sizing: border-box;
     text-align: center;
     font-family: 'Roboto', sans-serif;
+    /* overflow: hidden; */
+}
+
+#modal {
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    width: 100%;
+    height: 100vh;
+    background-color: rgb(0,0,0);
+    background-color: rgba(0,0,0,0.4);
+    display: none; 
+}
+
+.modalContent {
+    background-color: whitesmoke;
+    width: 350px;
+    margin: 120px auto;
+    padding: 100px;
+    border-radius: 20px;
+}
+
+.modalContent button {
+    color: wheat;
+    background-color: black;
+    padding: 10px 20px;
+    margin-top: 30px;
+    border-radius: 10px;
 }
 
 .header {
     padding: 10px;
     width: 100%;
+    margin-top: 60px;
+}
+
+.header h3 {
+    margin: 10px;
 }
 
 .choice {
     width: 50%;
     padding: 10px;
     margin: 50px auto;
+}
+
+.choice h4 {
+    font-size: 1.4rem;
+}
+
+#output {
+    margin: 10px;
+    font-size: 1.4rem;
+    font-style: italic;
 }
 
 span {
@@ -29,5 +72,8 @@ span {
 .buttons button {
     font-size: 120px;
     margin: 10px;
-    cursor: pointer;
 }
+
+button {
+    cursor: pointer;
+} 
