--- a/style.css
+++ b/style.css
@@ -4,7 +4,10 @@
     box-sizing: border-box;
     text-align: center;
     font-family: 'Roboto', sans-serif;
-    /* overflow: hidden; */
+}
+
+.container {
+    width: 100%;
 }
 
 #modal {
